# langgraph-oep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 19_wrapper_injected_fields.md  operational_caveats.md  public_claims.md  quickstart.md  relation_to_oep.md  usage.md  walkthrough.md
examples/: README.md  _shared.py
examples/01_code_review_agent/: README.md  expected_output.jsonl  run.py
examples/02_customer_support_with_credentials/: README.md  expected_output.jsonl  run.py
examples/03_rag_pipeline_with_cache/: README.md  expected_output.jsonl  run.py
examples/04_multi_step_orchestration_with_policy/: README.md  expected_output.jsonl  run.py
examples/05_interrupt_resume_with_model_version/: README.md  expected_output.jsonl  run.py
src/langgraph_oep/: __init__.py  attach.py  context.py  decision_id.py  ids.py  mapping.py  projection.py  saver.py  validation.py
src/langgraph_oep/sinks/: __init__.py  base.py  jsonl.py  stdout.py
tests/: helpers.py  test_attach.py  test_decision_context.py  test_decision_id_join.py  test_mapping_ratio.py  test_projection.py  test_saver.py  test_sinks.py  test_validation.py
